# ml

./: Cargo.toml  LICENSE_MIT  README.md
data/: models.json
src/: lib.rs  main.rs  model.rs  utils.rs  wasm.rs
web/: index.html  index.js  package.json  pnpm-lock.yaml
