[package]
name = "ml"
version = "0.1.0"
authors = ["realmayus <realmayus@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# wasm stuff
wasm-bindgen = { version = "0.2.63" , optional = true}
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.77" , features = ["console"], optional = true }

# Training the model
csv = { version = "1.3.1", optional = true }
rayon = { version = "1.10.0", optional = true }
rand = { version = "0.9.0", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.dev]
#opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
wasm = ["wasm-bindgen", "console_error_panic_hook", "web-sys"]  # Feature to enable wasm
native = ["csv", "rayon", "rand"]  # Default native compilation